<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lightlife</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="options_menu">Options</string>
    <string name="level_selector">Levels</string>
    <string name="back_button">Back</string>
    <string name="resume_button">Resume</string>
    <string name="pause_menu">Pause</string>
    <string name="error_unknown">Unknown error</string>
    <string name="ask_for_sound">Do you wish to start the game with sound on?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tip_for_sound">You can always turn it on again in the options menu</string>
    <string name="music_volume">Music Volume</string>
    <string name="back_to_main">Return to main menu</string>
    <string name="composer">Music by Jani Rantanen</string>
    <string name="sound_volume">Sound Volume</string>
    <string name="level_complete">Success!</string>
    <string name="next_level">Continue</string>
    <string name="level_1_image_button">1. Baby Steps</string>
    <string name="level_2_image_button">2. Shoot Something</string>
    <string name="level_3_image_button">3. Locks and Doors</string>
    <string name="level_4_image_button">4. Something in the Cogs</string>

</resources>
