<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/levelButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/level_one"
            android:text="@string/level_1_image_button"
            android:textColor="#FF000000"
            android:textSize="35sp" />

       <Button
            android:id="@+id/levelButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/level_two"
            android:text="@string/level_2_image_button"
            android:textColor="#FF000000"
            android:textSize="35sp" />
       
        <Button
            android:id="@+id/levelButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/level_three"
            android:text="@string/level_3_image_button"
            android:textColor="#FF000000"
            android:textSize="35sp" />
        
         <Button
            android:id="@+id/levelButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/level_four"
            android:text="@string/level_4_image_button"
            android:textColor="#FF000000"
            android:textSize="35sp" />

    </LinearLayout>

</HorizontalScrollView>