<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/back_button" />

    <TextView
        android:id="@+id/musicVolumeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/backButton"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:text="@string/music_volume" />

    <SeekBar
        android:id="@+id/music_volume_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/musicVolumeText"
        android:layout_below="@+id/musicVolumeText"
        android:paddingRight="20dp" />

    <TextView
        android:id="@+id/soundVolumeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/music_volume_bar"
        android:layout_centerVertical="true"
        android:text="@string/sound_volume" />

    <SeekBar
        android:id="@+id/sound_volume_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/soundVolumeText"
        android:layout_below="@+id/soundVolumeText"
        android:paddingRight="20dp" />

</RelativeLayout>
